# pcl-video-compression

./: .gitignore  LICENSE  README.md  benchmark.py  hello.py  main.py  pyproject.toml
pcl_compression/: reader.py
tests/: conftest.py
tests/aux_files/: small-pcap-test.json
tests/pcl_compression/: test_reader.py
