[project]
name = "pcl-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kornia>=0.8.1",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "ouster-sdk>=0.14.0",
    "pybind11-stubgen>=2.5.4",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
